feat: rename title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker&text=md.">
     <link rel="icon" type="image/ico" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>md dot</title>
+    <title>Md Dot</title>
   </head>
   <body>
     <div id="app"></div>
