--- a/index.html
+++ b/index.html
@@ -5,6 +5,41 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker&text=md.">
     <link rel="icon" type="image/ico" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      name="keywords"
+      content="markdown, editor, preview, local, client"
+    />
+    <meta name="title" content="Md Dot" />
+    <meta
+      name="description"
+      content="Simple markdown editor."
+    />
+
+    <meta name="robots" content="index, follow" />
+
+    <!-- ogp -->
+    <meta property="og:url" content="https://md.amabel.dev" />
+    <meta property="og:title" content="Md Dot" />
+    <meta
+      property="og:description"
+      content="Simple markdown editor."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/Amabel/md-dot/master/docs/logo.png"
+    />
+    <meta
+      property="og:image:url"
+      content="https://raw.githubusercontent.com/Amabel/md-dot/master/docs/logo.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://raw.githubusercontent.com/Amabel/md-dot/master/docs/logo.png"
+    />
+    <meta property="og:image:alt" content="Md Dot" />
+    <meta property="og:image:width" content="100" />
+    <meta property="og:image:height" content="100" />
     <title>Md Dot</title>
   </head>
   <body>
