--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
     <meta property="og:image:width" content="100" />
     <meta property="og:image:height" content="100" />
     <title>Md Dot</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V24X3YMQKP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-V24X3YMQKP');
+    </script>
   </head>
   <body>
     <div id="app"></div>
