feat: update ogp

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="title" content="Md Dot" />
     <meta
       name="description"
-      content="Simple markdown editor."
+      content="Simple markdown editor. Data will be saved to local storage and will never go out of your browser."
     />
 
     <meta name="robots" content="index, follow" />
@@ -23,23 +23,12 @@
     <meta property="og:title" content="Md Dot" />
     <meta
       property="og:description"
-      content="Simple markdown editor."
+      content="Simple markdown editor. Data will be saved to local storage and will never go out of your browser."
     />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/Amabel/md-dot/master/docs/logo.png"
     />
-    <meta
-      property="og:image:url"
-      content="https://raw.githubusercontent.com/Amabel/md-dot/master/docs/logo.png"
-    />
-    <meta
-      property="og:image:secure_url"
-      content="https://raw.githubusercontent.com/Amabel/md-dot/master/docs/logo.png"
-    />
-    <meta property="og:image:alt" content="Md Dot" />
-    <meta property="og:image:width" content="100" />
-    <meta property="og:image:height" content="100" />
     <title>Md Dot</title>
 
     <!-- Google tag (gtag.js) -->
