--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       property="og:image"
       content="https://raw.githubusercontent.com/Amabel/md-dot/master/docs/logo.png"
     />
+    <meta property="og:image:width" content="100" />
+    <meta property="og:image:height" content="100" />
     <title>Md Dot</title>
 
     <!-- Google tag (gtag.js) -->
